--- a/sparse/var/lib/environment/compositor/droid-hal-device.conf
+++ b/sparse/var/lib/environment/compositor/droid-hal-device.conf
@@ -2,5 +2,4 @@
 EGL_PLATFORM=fbdev
 QT_QPA_PLATFORM=hwcomposer
 # Determine which node is your touchscreen by checking /dev/input/event*
-LIPSTICK_OPTIONS=-plugin evdevtouch:/dev/input/event1
--plugin evdevkeyboard:keymap=/usr/share/qt5/keymaps/droid.qmap
+LIPSTICK_OPTIONS=-plugin evdevtouch:/dev/input/event1-plugin evdevkeyboard:keymap=/usr/share/qt5/keymaps/droid.qmap
